aslapp/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aslapp
  labels:
    app: aslapp
spec:
  selector: 
    matchLabels:
      app: aslapp
  replicas: 1
  template:
    metadata:
      labels:
        app: aslapp
    spec:
      containers:
      - image: aslapp:aslapp2
        imagePullPolicy: Never
        name: aslapp
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
          - containerPort: 8000
        volumeMounts:
        - name: videos
          mountPath: /app/aslapp/videos   # Mount to the container's /app/aslapp/videos path
      volumes:
      - name: videos
        hostPath:
          path: /Users/ryandickerson/Desktop/WUBER/FL24-project-group-8/aslapp/aslapp/videos
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: aslapp
spec:
  type: LoadBalancer
  selector:
    app: aslapp
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aslapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - http:
      paths:
      - path: /upload-video-to-folder/
        pathType: Prefix
        backend:
          service:
            name: aslapp  
            port:
              number: 8000 
      - path: /predict-letter/
        pathType: Prefix
        backend:
          service:
            name: aslapp  
            port:
              number: 8000     
      - path: /get-video-name/
        pathType: Prefix
        backend:
          service:
            name: aslapp 
            port:
              number: 8000 
      - path: /get-all-folders/
        pathType: Prefix
        backend:
          service:
            name: aslapp 
            port:
              number: 8000 
      - pathType: Prefix
        path: /
        backend:
          service:
            name: aslapp
            port:
              number: 8000
      - path: /get-videos-from-folder/
        pathType: Prefix
        backend:
          service:
            name: aslapp
            port:
              number: 8000
